Fixes an issue with picture sizes on mobile devices

--- a/bundle.css
+++ b/bundle.css
@@ -123,6 +123,7 @@ h1, h2, h3, h4, h5, h6 {
       position: relative; }
       .content #about #about-content .picture-container .picture {
         width: 225px;
+        height: 225px;
         filter: grayscale(100%);
         transition: .2s all ease;
         position: relative;
@@ -370,7 +371,8 @@ h1, h2, h3, h4, h5, h6 {
             font-size: 0.9em; }
       .content #about #about-content .picture-container .picture {
         order: 1;
-        width: 180px; }
+        width: 180px;
+        height: 180px; }
       .content #about #about-content .picture-container .picture-border {
         width: 180px;
         height: 180px;
