--- a/src/styles/_mobile.scss
+++ b/src/styles/_mobile.scss
@@ -73,6 +73,7 @@
                     .picture {
                         order: 1;
                         width: 180px;    
+                        height: 180px;
                     }
     
                     .picture-border {
