--- a/src/styles/components/_application.scss
+++ b/src/styles/components/_application.scss
@@ -145,6 +145,7 @@
 
                 .picture {
                     width: 225px;
+                    height: 225px;
                     filter: grayscale(100%);
                     transition: .2s all ease;
                     position: relative;
